# MineyCrafty

./: .gitignore  CMakeLists.txt  README.md  frag.glsl  vert.glsl
include/: camera.hpp  chunk.hpp  cube.hpp  game.hpp  rectprim.hpp  shader.hpp  texture.hpp  texture_atlas.hpp  timer.hpp  util.hpp
include/util/: input_manager.hpp  mouse.hpp  noise.hpp  timer.hpp  util.hpp
resources/: frag.glsl  quadfrag.glsl  quadvert.glsl  shadowvert.glsl  vert.glsl
src/: camera.cpp  chunk.cpp  cube.cpp  game.cpp  main.cpp  noise.cpp  rectprim.cpp  shader.cpp  texture.cpp  texture_atlas.cpp  timer.cpp
src/util/: input_manager.cpp  mouse.cpp  timer.cpp
